--- a/src/assets/scss/layout/_dashboard.scss
+++ b/src/assets/scss/layout/_dashboard.scss
@@ -10,6 +10,13 @@
   border-radius: 20px;
   transition: all 0.4s cubic-bezier(0,1.02,.65,1);
   z-index: 10;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &.active {
     top: 5%;
