--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -20,6 +20,15 @@ body {
   box-sizing: border-box;
 }
 
+* {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 #main {
   border-radius: 20px;
   background: $primary;
