--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -4,7 +4,7 @@
   transition: all 0.2s linear;
 
   &.nav--primary {
-    background: $primary;
+    background-color: #3C6FD1;
   }
   &.nav--secondary {
     background: #fff;
